--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,16 @@
 <body>
 
 <div id="content">
-    <p>Here is static content in the web page. You'll notice that it gets replaced by our app as soon as we start it.</p>
+    <div id="main-region">main region placeholder</div>
+    <div id="other-region">other region placeholder</div>
 </div>
 
 <script type="text/template" id="list-item-template">
     <li>One item</li>
+</script>
+
+<script type="text/template" id="other-template">
+    <p><%- firstName %> <%- lastName %> (<%- phoneNumber %>)</p>
 </script>
 
 <script src="bower_components/jquery/dist/jquery.js"></script>
