--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 </script>
 
 <script type="text/template" id="other-template">
-    <p><%- firstName %> <%- lastName %> (<%- phoneNumber %>)</p>
+    <p><%- firstName %> <%- lastName %></p>
 </script>
 
 <script src="bower_components/jquery/dist/jquery.js"></script>
