--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 </div>
 
 <script type="text/template" id="list-item-template">
-    <li>One item</li>
+    <%- firstName %> <%- lastName %>
 </script>
 
 <script type="text/template" id="other-template">
-    <p><%- firstName %> <%- lastName %></p>
+    <p>other block</p>
 </script>
 
 <script src="bower_components/jquery/dist/jquery.js"></script>
