--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 <script src="bower_components/backbone/backbone.js"></script>
 <script src="bower_components/marionette/lib/backbone.marionette.js"></script>
 <script src="app/app.js"></script>
+<script src="app/modules/test/test.js"></script>
+<script src="app/bootstrap.js"></script>
 
 </body>
 </html>
