--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
 
 <div id="root"></div>
 
+<script id="loader" type="text/html">
+loading...
+</script>
 <script id="application-layout-template" type="text/html">
     <div class="container">
         <h1>header</h1>
@@ -18,7 +21,7 @@
             <div class="col-xs-3">
                 <ul>
                     <li><a href="#list">list view</a></li>
-                    <li><a href="#list/details">form</a></li>
+                    <li><a href="#list/details/1">form</a></li>
                     <li><a href="#widgets">widgets</a></li>
                 </ul>
             </div>
@@ -27,10 +30,13 @@
     </div>
 </script>
 <script id="list-template" type="text/html">
-    <div>list</div>
+    <div><%= title %></div>
 </script>
 <script id="list-details-template" type="text/html">
-    <div>details</div>
+    <dl class="dl-horizontal">
+        <dt>id</dt><dd><%= id %></dd>
+        <dt>title</dt><dd><%= title %></dd>
+    </dl>
 </script>
 
 <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -39,11 +45,13 @@
 <script src="bower_components/marionette/lib/backbone.marionette.js"></script>
 
 <script src="app/app.js"></script>
+<script src="app/views/loader.js"></script>
 <script src="app/views/root-layout.js"></script>
 <script src="app/views/application-layout.js"></script>
 <script src="app/modules/list/test.js"></script>
 <script src="app/modules/list/views/list.js"></script>
 <script src="app/modules/list/views/details.js"></script>
+<script src="app/modules/list/models/item.js"></script>
 <script src="app/bootstrap.js"></script>
 
 </body>
