change collection to composite view

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,12 @@ loading...
     </div>
 </script>
 <script id="list-template" type="text/html">
+    <div>
+        <strong>list header</strong>
+        <div class="content"></div>
+    </div>
+</script>
+<script id="item-template" type="text/html">
     <div><%= title %></div>
 </script>
 <script id="list-details-template" type="text/html">
